--- a/end-page_styles.css
+++ b/end-page_styles.css
@@ -7,14 +7,14 @@
 
 body,
 html {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow-y: hidden;
     font-family: aktiv-grotesk, sans-serif;
     font-size: 14pt;
     font-weight: 300;
     cursor: crosshair;
-    cursor: url('./Assets/cursor_purple-cirlce.svg') 24 24, auto;
+    cursor: url('./Assets/Cursors/cursor_purple.svg') 24 24, auto;
     background-color: var(--grey);
 }
 
@@ -204,7 +204,7 @@ h1 {
     position: absolute;
     top: 35%;
     width: 160px;
-    cursor: url('./Assets/cursor_purple-cirlce-filled.svg') 24 24, pointer;
+    cursor: url('./Assets/Cursors/cursor_purple_filled.svg') 24 24, pointer;
 }
 
 .button-title {
@@ -241,8 +241,8 @@ h1 {
     main {
         display: flex;
         flex-direction: column;
-        height: 100vh;
-        width: 100vw;
+        height: 100%;
+        width: 100%;
     }
 
     .background {
