--- a/index_styles.css
+++ b/index_styles.css
@@ -10,6 +10,7 @@ html {
     width: 100%;
     height: 100%;
     overflow-y: hidden;
+    overflow-x: hidden;
     font-family: aktiv-grotesk, sans-serif;
     font-size: 14pt;
     font-weight: 300;
@@ -70,6 +71,15 @@ main {
     display: flex;
     width: 100%;
     height: 100%;
+}
+
+.fade{
+    opacity: 0%;
+    transition: opacity 1s linear;
+    transition-delay: 1s;
+}
+.fade.show{
+    opacity: 100%;
 }
 
 
