--- a/end-page_styles.css
+++ b/end-page_styles.css
@@ -97,7 +97,14 @@ main {
     width: 100%;
     height: 100%;
 }
-
+.fade{
+    opacity: 0%;
+    transition: opacity 1s linear;
+    transition-delay: 1s;
+}
+.fade.show{
+    opacity: 100%;
+}
 
 .column-1 {
     position: relative;
