--- a/index_styles.css
+++ b/index_styles.css
@@ -7,7 +7,7 @@
 
 body,
 html {
-    width: 100%;
+    width: 100vw;
     height: 100%;
     overflow-y: hidden;
     overflow-x: hidden;
@@ -88,6 +88,11 @@ main {
     flex-grow: 1;
 
 }
+.wrapper {
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
 
 h1 {
     font-size: var(--font-size);
@@ -115,7 +120,6 @@ h1 {
 }
 
 .time-scroll-y {
-    position: relative;
     font-family: aktiv-grotesk-condensed, sans-serif;
     font-weight: 900;
     font-style: normal;
@@ -146,7 +150,7 @@ h1 {
 
 .column-3 {
     padding: calc(1.5 * var(--font-size));
-    width: 33%;
+    flex-grow: 1;
 }
 
 .container {
